# mcp-keyword-search

./: README.md  pyproject.toml  sample.txt
src/: server.py
